# linux-learning

./: .gitignore
administration-course/: launch.sh  readme.md
administration-course/debian-ovf-extracted/: Debian 12.ovf
bgnet/: README.md  http-client.c
containers-from-scratch/: readme.md
linux-networks/: README  client.c
linux-programming-interface/: README.md
linux-programming-interface/chapters/: CMakeLists.txt
linux-programming-interface/chapters/04/: CMakeLists.txt  Makefile  cp.cc  make_hole.cc  readme.md  tee.c  wc.cc
linux-programming-interface/chapters/05/: 03-atomic-append.cc  04-dup.cc  05-dup.cc  06-dup.cc  CMakeLists.txt  common.hh  readme.md
linux-programming-interface/chapters/20/: 01-sig-sender.cc  02-sig-ignore.cc  03-nodefer.cc  CMakeLists.txt  readme.md  sig-common.hh
linux-programming-interface/chapters/49/: 01-cp-mmap.cc  03-mmap-signals.cc  CMakeLists.txt  readme.md
linux-programming-interface/chapters/49/test/: do-test  one-page.rnd  small-file.rnd  two-page-plus.rnd  two-page.rnd
linux-programming-interface/chapters/50/: 01-rlimit-mlock.cc  02-madv-dontneed.cc  CMakeLists.txt
linux-programming-interface/chapters/common/: CMakeLists.txt  common.h
linux-programming-interface/chapters/common/include/: common.hh
linux-programming-interface/chapters/common/src/: common.cc
linux-stepik/1-2/: Makefile  solution.c
var/: cgroups.md  systemd.md
